--- a/shellcode-injection/level-1-1/Makefile
+++ b/shellcode-injection/level-1-1/Makefile
@@ -2,13 +2,14 @@ TARGET = shellcode-injection-level1.1
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 LDFLAGS = -lcapstone -z execstack -fno-stack-protector -static
+INCLUDE = -I ../../include ../../include/util.c
 
 .PHONY: all clean
 
 all: $(TARGET)
 
 $(TARGET): $(TARGET).c
-	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
+	$(CC) $(CFLAGS) $(INCLUDE) -o $@ $< $(LDFLAGS)
 
 clean: 
 	rm -rf $(TARGET)
