--- a/shellcode-injection/level-3-2/Makefile
+++ b/shellcode-injection/level-3-2/Makefile
@@ -1,13 +1,14 @@
 TARGET = shellcode-injection-level3.2
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror -Wno-implicit-function-declaration -fno-stack-protector
+INCLUDE = -I ../../include ../../include/util.c
 
 .PHONY: all clean
 
 all: $(TARGET)
 
 $(TARGET): $(TARGET).c
-	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
+	$(CC) $(CFLAGS) $(INCLUDE) -o $@ $< $(LDFLAGS)
 
 clean: 
 	rm -rf $(TARGET)
